Correct central aligning in styles.css

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content:space-between;
   padding: 8px;
+  align-items: center;
 }
 
 .logo {
@@ -21,6 +22,8 @@ ul {
   margin: 0;
   padding: 0;
   justify-content: space-between;
+  align-items: center;
+  gap: 8px;
 
 }
 
